fix(merlin-www-top-stories): correct border spacing on glamour
[ch2326]

--- a/packages/merlin-www-top-stories/sass/glamour/glamour.scss
+++ b/packages/merlin-www-top-stories/sass/glamour/glamour.scss
@@ -51,7 +51,7 @@
 }
 
 .c-top-stories__nav-btn--left {
-    border-top: 3px solid $concrete;
+    border-top: 1px solid $concrete;
     top: 50%;
 }
 
